# contributor-network

./: .gitignore  BUG_ANALYSIS.md  CLAUDE.md  CLEANUP_SUMMARY.md  DATA_EXPANSION_PLAN.md  DS-BrandBook_v003-2024.docx  README.md  VISUALIZATION_DESIGN_GUIDE.md  config.toml  config.toml.backup  contributors.csv  index.html  index.js  links.csv  package-lock.json  package.json  pyproject.toml  repositories.csv  repositories.txt  style.css  tsconfig.json  veda.toml  vite.config.js  vite.config.js.timestamp-1769849253514-41204e6b88a59.mjs  vite.config.js.timestamp-1769912046341-585c8653bb969.mjs  vite.config.js.timestamp-1769924744007-01b6fba2d1102.mjs  vite.config.js.timestamp-1770086974485-378b5b4345ac.mjs  vite.config.js.timestamp-1770089368592-065c8675ccf33.mjs  vite.config.ts  vite.plugin-template-html.ts
.claude/: CLAUDE.md  DATA_EXPANSION_PLAN.md  DATE_RANGE_IMPLEMENTATION_PLAN.md  PRD.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pages.yml  preview-s3-deploy.yml  preview-s3-remove.yml  release.yml  static.yml
.playwright-mcp/: page-2026-03-31T18-52-09-462Z.yml  page-2026-03-31T18-52-42-556Z.yml  page-2026-03-31T18-52-54-142Z.yml  page-2026-04-02T01-43-34-662Z.yml
assets/css/: style.css
assets/data/: config.json  links.csv  repositories.csv  top_contributors.csv
backup/: repositories.csv
css/: style.css
data/: config.json  links.csv  repositories.csv  top_contributors.csv
dist_new/: contributor-network.es.js  contributor-network.iife.js
docs/: ARCHITECTURE.md  CLAUDE.md  DATE_RANGE_IMPLEMENTATION_PLAN.md  DECISIONS.md  DEVELOPMENT_GUIDE.md  JAVASCRIPT_REFACTORING.md  PRD.md  ROADMAP.md
docs/sponsor_centric/: 00_READ_ME_FIRST.txt  ASSESSMENT_INDEX.md  BLOCKING_QUESTIONS_RESOLUTION.md  CONFIG_ENHANCEMENT_STRATEGY.md  CONTRIBUTOR_DISCOVERY_STRATEGY.md  FEASIBILITY_ASSESSMENT.md  FEATURE_REQUEST_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  REPOSITORY_CENTRIC_STRATEGY.md  REPOSITORY_FIRST_IMPLEMENTATION_PLAN.md  REPOSITORY_FIRST_IMPLEMENTATION_STRATEGY.md  SIMULATION_IMPLEMENTATION_DETAILS.md
js/: chart.js  index.js
js/__tests__/: filter.test.js  helpers.test.js
js/config/: scales.js  theme.js
js/data/: filter.js  prepare.js
js/interaction/: click.js  findNode.js  hover.js  zoom.js
js/layout/: positioning.js  resize.js
js/render/: canvas.js  draw.js  labels.js  repoCard.js  shapes.js  text.js  tooltip.js
js/simulations/: collaborationSimulation.js  communitySimulation.js  contributorSimulation.js  index.js  ownerSimulation.js  remainingSimulation.js
js/state/: filterState.js  interactionState.js
js/utils/: debug.js  validation.js
js/visualization/: index.js
public/css/: fonts.css  style.css
scripts/: build_csvs.py  fetch_data.py  fetch_members.py
src/: chart.ts  d3-bbox-collide.d.ts  index.ts  main.ts  types.ts
templates/: index.html.jinja
tests/: test_config.py
(+1289 files in other folders)
