[project]
name = "contributor-network"
version = "0.1.0"
description = "A visualization of contributors to projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "jinja2>=3.1.4",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
]

[project.scripts]
contributor-network = "contributor_network.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.mypy]
files = ["python"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.hatch.build.targets.wheel]
packages = ["python/contributor_network"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
